deployment-redmine.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redmine-deploy
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  selector:
    matchLabels:
      app: redmine-app
  template:
    metadata:
      labels:
        app: redmine-app
    spec:
      containers:
        - image: redmine:4.1
          name: redmine
          ports:
          - containerPort: 3000
            protocol: TCP
          resources:
            requests:
              cpu: 1
              memory: 1Gi
            limits:
              cpu: 1
              memory: 1Gi
