redmine-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redmine-svc
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: redmine-app
  type: ClusterIP
